<resources>
    <string name="app_name">MyNotepad App</string>
    <string name="calender_Fragment">calender</string>
    <string name="color">color</string>
    <string name="Share">Share</string>
    <string name="View">View</string>
    <string name="hinttitle">Enter title...</string>
    <string name="hintdesc">Enter text...</string>
    <string name="views">View</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="lgrid">Large grid</string>
    <string name="calender">Calender</string>
    <string name="titless">Titles</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="Language">Language</string>
    <string name="Notes">Notes</string>
    <string name="Calender">Calender</string>
    <string name="Search">Search</string>
    <string name="More">More</string>
    <string name="save">SAVE</string>
    <string name="searcm">Search Menu</string>
    <string name="notesigned">Not signed in</string>
    <string name="upcoming">Up coming</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>