<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5sp"
        android:backgroundTint="#00E5FF"
        app:cardCornerRadius="6dp"
        android:layout_marginRight="5dp"
        android:layout_height="70dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titles"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="15dp"
                android:text="@string/titless" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_marginTop="-10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/description" />

            <TextView
                android:id="@+id/dateandtime"
                android:layout_width="100sp"
                android:layout_height="30dp"
                android:layout_marginTop="-50dp"
                android:layout_marginLeft="290dp"
                android:textColor="@color/black"
                android:text="@string/time" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>