<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="200dp"
    android:layout_marginRight="20dp"
    app:cardCornerRadius="8dp"
   android:backgroundTint="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewsd3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/views"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lists"
        android:layout_width="280dp"
        android:layout_height="40sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="#00E5FF"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40sp"
            android:src="@drawable/list24" />


        <TextView
            android:id="@+id/dfas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="-40dp"
            android:text="@string/list"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grids"
        android:layout_width="280dp"
        android:layout_height="40sp"
        android:layout_marginLeft="20dp"
        android:background="#00B0FF"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40sp"
            android:src="@drawable/grid" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/largegrids"
        android:layout_width="280dp"
        android:layout_height="40sp"
        android:background="#FF3D00"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40sp"
            android:src="@drawable/ic_baseline_filter_list_24" />


        <TextView
            android:id="@+id/dfsfas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="-40dp"
            android:text="@string/lgrid"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>